--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -1,3 +1,6 @@
+set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
 
 FetchContent_Declare(
   googletest
@@ -13,7 +16,7 @@ include(GoogleTest)
 find_package(Catch2 REQUIRED)
 add_executable(tests BasicTests.cpp TestFixtureTests.cpp TestWorkloads.cpp)
 target_include_directories( tests PRIVATE ../include ../src )
-target_link_libraries(tests PRIVATE Catch2::Catch2WithMain HeapWatcher )
+target_link_libraries(tests PRIVATE Catch2::Catch2WithMain HeapWatcher Threads::Threads )
 
 include(CTest)
 include(Catch)
